Update problem formatting

--- a/doc/02.md
+++ b/doc/02.md
@@ -28,11 +28,13 @@ to the bathroom. You picture a keypad like this:
 ```
 
 Suppose your instructions are:
-> `ULL`
-> `RRDDD`
-> `LURDL`
-> `UUUUD`
-> You start at "5" and move up (to "2"), left (to "1"), and left (you can't, and
+> ```
+ULL
+RRDDD
+LURDL
+UUUUD
+```
+You start at "5" and move up (to "2"), left (to "1"), and left (you can't, and
 stay on "1"), so the first button is 1. Starting from the previous button
 ("1"), you move right twice (to "3") and then down three times (stopping at "9"
 after two moves and ignoring the third), ending up with 9. Continuing from "9",
