--- a/doc/06.md
+++ b/doc/06.md
@@ -12,22 +12,24 @@ corrupted - almost too badly to recover. Almost.
 
 All you need to do is figure out which character is most frequent for each
 position. For example, suppose you had recorded the following messages:
-> `eedadn`
-`drvtee`
-`eandsr`
-`raavrd`
-`atevrs`
-`tsrnev`
-`sdttsa`
-`rasrtv`
-`nssdts`
-`ntnada`
-`svetve`
-`tesnvt`
-`vntsnd`
-`vrdear`
-`dvrsen`
-`enarar`
+> ```
+eedadn
+drvtee
+eandsr
+raavrd
+atevrs
+tsrnev
+sdttsa
+rasrtv
+nssdts
+ntnada
+svetve
+tesnvt
+vntsnd
+vrdear
+dvrsen
+enarar
+```
 The most common character in the first column is _e_; in the second, _a_; in the
 third, _s_, and so on. Combining these characters returns the error-corrected
 message, `easter`.
